gjort om struktur för services samt lagt till mer frontend och ny mysql-fil